5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1630_2946.log
== TEST (2019-04-02 16:08:35) 
-- CODE:
ML = float(input("Média do Laboratórios:"))
MT = float(input("Média dos trabalhos"))
MP = float(input("Média das Provas"))

MF = (ML*0,25+MT*0,3+MP*0,45)/3
print(round(MF, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    MF = (ML*0,25+MT*0,3+MP*0,45)/3
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:36) 
-- CODE:
ML = float(input("Média do Laboratórios:"))
MT = float(input("Média dos trabalhos:"))
MP = float(input("Média das Provas:"))

MF = (ML*0,25+MT*0,3+MP*0,45)/3
print(round(MF, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    MF = (ML*0,25+MT*0,3+MP*0,45)/3
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:54) 
-- CODE:
ML = int(input("Média do Laboratórios:"))
MT = float(input("Média dos trabalhos:"))
MP = float(input("Média das Provas:"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ML = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:43) 
-- CODE:
ML = float(input("Média do Laboratórios:"))
MT = float(input("Média dos trabalhos:"))
MP = float(input("Média das Provas:"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ML = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:28) 
-- CODE:
ML = int(input("Média do Laboratórios:"))
MT = int(input("Média dos trabalhos:"))
MP = int(input("Média das Provas:"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ML = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:47) 
-- CODE:
ML = float(input("Média do Laboratórios:"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ML = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:15) 
-- CODE:
ML = float(input("media dos laboratorios:"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ML = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:19) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ML = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:29) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML*0.25+MT*0.3+MP*0.45)/3



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ML = int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:11) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML*0.25+MT*0.3+MP*0.45)/3
print(round(ML, 2))


-- OUTPUT:
8.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:29) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML*0.25+MT*0.3+MP*0.45)/3
print(round(ML, 2))


-- EXECUTION TIME:
0.098784
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
8.5
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
4.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:46) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML*0.25+MT*0.3+MP*0.45)/
print(round(MF, 2))


-- ERROR:
File "XXXX", line 5
    MF = (ML*0.25+MT*0.3+MP*0.45)/
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:55) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML*0.25+MT*0.3+MP*0.45)/3
print(round(MF, 2))


-- OUTPUT:
2.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:18:09) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML*0.25+MT*0.3+MP*0.45)/3
print(round(MF, 2))


-- EXECUTION TIME:
0.169221
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
2.1
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
2.09
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:56) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML0.25+MT*0.3+MP*0.45)/1
print(round(MF, 2))


-- ERROR:
File "XXXX", line 5
    MF = (ML0.25+MT*0.3+MP*0.45)/1
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:00) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML0.25+MT*0.3+MP*0.45)/1
print(round(MF, 2))


-- ERROR:
File "XXXX", line 5
    MF = (ML0.25+MT*0.3+MP*0.45)/1
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:08) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML*0.25+MT*0.3+MP*0.45)/1
print(round(MF, 2))


-- OUTPUT:
6.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:19) 
-- CODE:
ML = float(input("media dos laboratorios:"))
MT = float(input("media de trabalhos:"))
MP = float(input("media de provas:"))

MF = (ML*0.25+MT*0.3+MP*0.45)/1
print(round(MF, 2))


-- EXECUTION TIME:
0.149847
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
